tests/errors/tc_expr_cast_int2ptr.lx
@module "main"

const foo -> fn () void {}

pub const main -> fn () int {
    let p: *void = cast<*void>(42);
    return 0;
}
